--- a/src/Constants/GeneralStyles/fonts.scss
+++ b/src/Constants/GeneralStyles/fonts.scss
@@ -2,27 +2,28 @@
 
 @mixin text{
   font-family: 'Inter', sans-serif;
-  font-family: 'Open Sans', sans-serif;
+  // font-family: 'Open Sans', sans-serif;
+  font-family: Montserrat,sans-serif;
   font-weight: 400;
   @media (min-width: 768px){
   }
 }
 
 @mixin textLight{
-  font-family: 'Inter', sans-serif;
-  font-family: 'Open Sans', sans-serif;
+  // font-family: 'Open Sans', sans-serif;
+  font-family: Montserrat,sans-serif;
   font-weight: 300;
   color: rgba(255, 255, 255, 0.519);
 }
 
 @mixin textBold{
-  font-family: 'Inter', sans-serif;
-  font-family: 'Open Sans', sans-serif;
+  // font-family: 'Open Sans', sans-serif;
+  font-family: Montserrat,sans-serif;
   font-weight: 700;
 }
 
 @mixin textMedium {
-  font-family: 'Inter', sans-serif;
-  font-family: 'Open Sans', sans-serif;
+  // font-family: 'Open Sans', sans-serif;
+  font-family: Montserrat,sans-serif;
   font-weight: 500;
 }
