--- a/src/Pages/JKPage/JKPage.scss
+++ b/src/Pages/JKPage/JKPage.scss
@@ -53,6 +53,8 @@
     
     line-height: 33px;
     background-color: #2B614C;
+    border: 2px solid #2B614C;
+    box-sizing: border-box;
     padding: 5px;
     padding-right: 20px;
     width: 250px;
@@ -60,6 +62,9 @@
 
     &:hover {
       cursor: pointer;
+      background-color: transparent;
+      border: 2px solid #2B614C;
+      color: #2B614C
     }
 
   }
