--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -5,8 +5,9 @@
 
   justify-self: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  max-width: 450px;
-
+  max-width: 100%;
+  width: 100%; 
+  
   &:nth-child(3){
     justify-self: end;
   }
