--- a/src/Components/Filters/Filters.scss
+++ b/src/Components/Filters/Filters.scss
@@ -1,7 +1,8 @@
 @use '../../Constants/GeneralStyles/fonts.scss' as *;
 
 .customized-label {
-  margin-bottom: 20px;
+  // margin-top: 10px;
+  margin-bottom: 10px;
   @include text;
   font-size: 24px;
 }
