--- a/src/Pages/JKPage/JKPage.scss
+++ b/src/Pages/JKPage/JKPage.scss
@@ -9,8 +9,14 @@
     margin-bottom: 50px;
 
     &_area {
+      background-color: #EBEBEB;
       display: grid;
       justify-items: center;
+    }
+
+    &_pagination {
+      display: none;
+      justify-content: center;
     }
 
     &_info {
@@ -63,11 +69,24 @@
     width: 250px;
     text-align: right;
 
+
+    display: flex;
+	  align-items: center;
+    justify-content: space-between;
+
     &:hover {
       cursor: pointer;
       background-color: transparent;
       border: 2px solid #2B614C;
       color: #2B614C
+    }
+
+    &_return {
+      display: none;
+      text-align: center;
+      padding: 0;
+      padding-right: 10px;
+      width: 200px;
     }
 
   }
