--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -39,7 +39,7 @@
     background-image: url('../../Assets/Images/work.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     height: 250px;
     transition: .5s;
   }
