--- a/src/Constants/GeneralStyles/fonts.scss
+++ b/src/Constants/GeneralStyles/fonts.scss
@@ -13,7 +13,7 @@
   // font-family: 'Open Sans', sans-serif;
   font-family: Montserrat,sans-serif;
   font-weight: 300;
-  color: rgba(255, 255, 255, 0.519);
+  // color: rgba(255, 255, 255, 0.519);
 }
 
 @mixin textBold{
