--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -7,6 +7,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   max-width: 100%;
   width: 100%; 
+  position: relative;
   
   &:nth-child(3){
     justify-self: end;
@@ -18,6 +19,21 @@
 
   &:nth-child(1){
     justify-self: start;
+  }
+
+  &__lock {
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+
+    top: 0;
+
+    background-image: url('../../Assets/Images/lock.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    opacity: 20%;
   }
   
 
