--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -5,6 +5,7 @@
 @import './diagram.scss';
 @import './split.scss';
 @import './TeamMembers.scss';
+@import './readMore.scss';
 
 .aboutUs * {
   box-sizing: border-box;
@@ -22,5 +23,5 @@
   min-height: 80vh;
 
   display: grid;
-  grid-template-rows: repeat(4, 100vh);
+  grid-template-rows: repeat(4, minmax(100vh, auto));
 }
