--- a/src/Pages/AboutUs/TeamMembers.scss
+++ b/src/Pages/AboutUs/TeamMembers.scss
@@ -1,7 +1,7 @@
 @use '../../Constants/GeneralStyles/fonts.scss' as *;
 
 .teamInfo {
-  // margin-top: 20vh;
+  margin-top: 150px;
   height: 100vh;
 
   display: grid;
