--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -3,7 +3,6 @@
 @import './textAnim.scss';
 @import './video.scss';
 @import './diagram.scss';
-@import './split.scss';
 @import './TeamMembers.scss';
 @import './readMore.scss';
 
@@ -12,6 +11,7 @@
 }
 
 .aboutUs{
+  max-width: 100vw;
   background-image: url('https://img.lunstatic.net/building-800x600/21913.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -24,4 +24,17 @@
 
   display: grid;
   grid-template-rows: repeat(4, minmax(100vh, auto));
+}
+
+
+@media(max-width: 1100px) {
+  .aboutUs{
+    padding: 10px 0px;
+    padding-top: 150px;
+    min-height: 80vh;
+  
+    display: grid;
+    grid-template-rows: repeat(4, minmax(100vh, auto));
+  }
+  
 }
