--- a/src/Pages/AboutUs/TeamMembers.scss
+++ b/src/Pages/AboutUs/TeamMembers.scss
@@ -55,3 +55,65 @@
     }
   }
 }
+
+
+@media(max-width: 1100px) {
+  .teamInfo {
+    margin-top: 50px;
+    height: auto;
+  
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0px;
+    overflow: hidden;
+  
+    padding-left: 5px;
+
+    &__text {
+      color: #2b614c;
+      &_title {
+        @include textBold;
+        font-size: 20vw;
+        margin-bottom: 0px;
+      }
+  
+      &_description {
+        @include textLight;
+        font-size: 5vw;
+        align-self: center;
+      }
+    }
+  }
+  
+  .teamMembers {
+    padding: 5px;
+    align-self: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    margin: 60px 0px;
+  
+    width: 100%;
+    transform: none;
+  
+    &__member {
+      overflow: hidden;
+      background-color: #2b614c98;
+      position: static;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        transform: none;
+      }
+  
+      &:nth-child(4) {
+        grid-column: 1/2;
+      }
+      &:nth-child(5) {
+        grid-column: 3/4;
+      }
+    }
+  }
+}
