--- a/src/Pages/AboutUs/counter.scss
+++ b/src/Pages/AboutUs/counter.scss
@@ -26,3 +26,32 @@
     }
   }
 }
+
+@media(max-width: 1100px) {
+  .stat-number {
+    @include textLight;
+    // font-size: 100px;
+    font-size: 25vw;
+  }
+  
+  .stat-one {
+    color: #FFF;
+    @include textLight;
+  
+    &__text {
+      font-size: 12vw;
+      margin-left: 0px;
+    }
+  }
+  
+  .counter__block {
+    min-height: 100vh;
+    text-align: center;
+    &:nth-child(2) {
+      text-align: center;
+      div {
+        transform: none;
+      }
+    }
+  }
+}
