--- a/src/Pages/InfoPage/InfoPage.scss
+++ b/src/Pages/InfoPage/InfoPage.scss
@@ -16,7 +16,6 @@
   }
 
   &__img {
-    background-color: aqua;
     width: 90%;
     height: 70vh;
     object-fit: cover;
@@ -52,6 +51,11 @@
     margin-bottom: 30px;
     border-top: 1px solid #2B614C;
     padding-top: 10px;
+
+    &_tag:hover {
+      cursor: pointer;
+      background-color: #2B614C;
+    }
   }
 
   &__moreCards {
@@ -62,7 +66,57 @@
 
 }
 
-.test:hover {
-  cursor: pointer;
-  background-color: #2B614C;
+@media(max-width:1350px) {
+  .info__moreCards {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media(max-width: 1100px) {
+  .info {
+    padding: 10px 0px;
+    @include text;
+    font-size: 25px;
+    display: inline-block;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+  
+    &__img {
+      width: 100%;
+    }
+  
+    &__textBlock {
+      padding: 0px 20px;
+    }
+  
+    &__more {
+      padding: 0px 30px;
+      h3 {
+        margin-bottom: 5px;
+      }
+    }
+  
+    &__tags {
+      margin-bottom: 30px;
+      border-top: 1px solid #2B614C;
+      padding-top: 10px;
+  
+      &_tag:hover {
+        cursor: pointer;
+        background-color: #2B614C;
+      }
+    }
+  
+    &__moreCards {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 0px;
+      justify-items: center;
+    }
+  
+  }
+  
 }
