--- a/src/Pages/JKPage/JKPage.scss
+++ b/src/Pages/JKPage/JKPage.scss
@@ -60,7 +60,6 @@
   }
 
   &__BlockiconInfo {
-    // justify-self: center;
     align-self: center;
   }
 
@@ -131,27 +130,45 @@
     width: 100%;
     justify-self: end;
   }
+
+  &__newsTitle {
+    font-size: 35px;
+    padding: 15px;
+    margin-bottom: 130px;
+    border-bottom: 1px solid #2B614C;
+  }
 }
 
-@media(max-width:1400px) {
+@media(max-width: 1100px) {
   .jkPage {
-    padding: 100px;
-    color: #000000;
+    padding: 100px 10px;
   
     &__block {
+
+      &_area {
+        // background-color: #EBEBEB;
+        display: none;
+        justify-items: center;
+      }
       
       margin-bottom: 50px;
   
       &_info {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        z-index: 9;
+      }
+  
+      &_txtInfo {
         display: grid;
-        column-gap: 60px;
-        grid-template-columns: 1fr 2fr;
-        grid-template-rows: 1fr 7fr;
+        grid-template-columns: 1fr;
+        gap: 40px;
       }
   
       &_map {
         width: 100%;
-        height: 500px;
+        height: 400px;
       }
   
       &_gallery {
@@ -169,32 +186,71 @@
           width: 100%;
           height: 100%;
           transition: .7s;
-          object-fit: cover;
           &:hover {
-            transform: scale(1.3);
+            transform: scale(1.05);
           }
   
         }
       }
+    }
+
+    &__MobileArea {
+      display: block;
+      img {
+        width: 100%;
+      }
+
+      &_toggleBtn {
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+      }
+    }
   
+    &__BlockiconInfo {
+      align-self: center;
+    }
+  
+    &__iconInfo{
+      margin-bottom: 30px;
+      display: flex;
+      gap: 20px;
+      align-items: center;
     }
   
     &__btn {
-      grid-column-start: 2;
       justify-self: end;
-      align-self: center;
+      align-self: start;
       @include textLight;
       color: white;
       
       line-height: 33px;
       background-color: #2B614C;
+      border: 2px solid #2B614C;
+      box-sizing: border-box;
       padding: 5px;
       padding-right: 20px;
       width: 250px;
       text-align: right;
   
+  
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+  
       &:hover {
         cursor: pointer;
+        background-color: transparent;
+        border: 2px solid #2B614C;
+        color: #2B614C
+      }
+  
+      &_return {
+        display: none;
+        text-align: center;
+        padding: 0;
+        padding-right: 10px;
+        width: 200px;
       }
   
     }
@@ -203,141 +259,49 @@
       @include textLight;
   
       &_title {
-        font-size: 45px;
-        margin-bottom: 28px;
+        color: #3D7658;
+        font-size: 84px;
+        margin-bottom: 34px;
       }
       &_description {
-        font-size: 15px;
-        line-height: 2vw;
+        font-size: 17px;
+        line-height: 30px;
+        color: #2B614C;
+        border-top: 1px solid #2B614C;
+        border-bottom: 1px solid #2B614C;
+        padding: 30px 0px;
       }
     }
     &__image {
       grid-row-start: 2;
       width: 100%;
       justify-self: end;
-      align-self: center;
     }
-  } 
+  }
+  
 }
 
-@media(max-width: 1000px) {
-  .jkPage {
-  
-    &__block {
-  
-      &_info {
-        display: grid;
-        column-gap: 60px;
-        row-gap: 30px;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto auto;
-      }
-  
-    }
-  
-    &__btn {
-      grid-column-start: 1;
-      grid-row-start: 3;
-      justify-self: end;
-      align-self: center;
-      
-      line-height: 33px;
-      padding: 5px;
-      padding-right: 20px;
-      width: 250px;
-      text-align: right;
-    }
-    &__txt {
-      grid-row-start: 2;
-    }
-    &__image {
-      grid-row-start: 1;
-      width: 100%;
-      justify-self: end;
-      align-self: center;
-    }
-  } 
+@media(min-width: 1100px) {
+  .jkPage__MobileArea {
+    display: none;
+  }
 }
 
-@media(max-width: 800px) {
-  .jkPage {
-    padding: 50px;
-
-    &__block {
-      &_map {
-        width: 100%;
-        height: 400px;
-      }
-    }
-  
-    &__btn {
-      line-height: 33px;
-      padding: 5px;
-      padding-right: 20px;
-      width: 250px;
-      text-align: right;
-    }
-    &__txt {
-      grid-row-start: 2;
-      &_title {
-        font-size: 45px;
-        margin-bottom: 28px;
-      }
-      &_description {
-        font-size: 15px;
-        line-height: 25px;
-      }
-    }
-    &__image {
-      grid-row-start: 1;
-      width: 100%;
-      justify-self: end;
-      align-self: center;
-    }
-  } 
+@media(max-width: 700px) {
+  .jkPage__block_gallery {
+    grid-template-columns: 1fr 1fr;
+  }
 }
-
-@media(max-width: 1100px) {
-  .jkPage {
-    padding: 10px;
-
-    &__block {
-      &_map {
-        width: 100%;
-        height: 400px;
-      }
-    }
-  
-    &__btn {
-      grid-column-start: 1;
-      grid-row-start: 3;
-      justify-self: auto;
-      align-self: center;
-
-      line-height: 33px;
-      padding: 5px;
-      padding-right: 20px;
-      width: auto;
-      text-align: center;
-    }
-    &__txt {
-      grid-row-start: 2;
-      &_title {
-        font-size: 45px;
-        margin-bottom: 28px;
-      }
-      &_description {
-        font-size: 15px;
-        line-height: 25px;
-      }
-    }
-    &__image {
-      grid-row-start: 1;
-      width: 100%;
-      height: 500px;
-      object-fit: cover;
-      justify-self: end;
-      align-self: center;
-    }
-  } 
+@media(max-width: 500px) {
+  .jkPage__txt_title {
+    font-size: 64px;
+  }
+  .jkPage__btn {
+    width: 100%;
+  }
+}
+@media(max-width: 390px) {
+  .jkPage__block_gallery {
+    grid-template-columns: 1fr;
+  }
 }
