--- a/src/Pages/FlatPage/FlatPage.scss
+++ b/src/Pages/FlatPage/FlatPage.scss
@@ -1,9 +1,5 @@
 @use '../../Constants/GeneralStyles/fonts.scss' as *;
 
-// Font Family
-// $body-font: "Open Sans";
-
-// Font Weights
 $thin: 100;
 $light: 300;
 $regular: 400;
@@ -11,7 +7,6 @@ $semibold: 500;
 $bold: 700;
 $ultra: 800;
 
-// Colors
 $black: #000000;
 $dark-gray: rgba($black, 0.8);
 $gray: rgba($black, 0.6);
@@ -20,7 +15,6 @@ $lighter-gray: rgba($black, 0.2);
 $white: #FFFFFF;
 $accent: #3D7658;
 
-// Form Settings
 $max-width: 450px;
 $max-height: 400px;
 $gutters: 24px;
@@ -288,7 +282,6 @@ $gutters: 24px;
   &-footer {}
 }
 
-// Pen Footer
 .pen-footer {
   display: flex;
   flex-direction: row;
@@ -348,6 +341,10 @@ $gutters: 24px;
     gap: 20px;
     align-items: flex-end;
     user-select: none;
+
+    &_title {
+      font-size: 70px;
+    }
   }
 
   &__status {
@@ -385,7 +382,6 @@ $gutters: 24px;
 $container-size: 600px;
 $grid-root: 7;
 $zoom-factor: 1.8;
-// Those ^ 3 things are all you'll need to edit
 $zoom-size: $container-size * $zoom-factor;
 $offset: $zoom-size - $container-size;
 $stepper-count: $grid-root;
@@ -440,7 +436,6 @@ $stepper: $offset / $stepper-count;
   z-index: -1;
 }
 
-// Colors for development
 .grid-item {
   // background-color: rgba(48, 197, 255, 0.25);
 
@@ -449,7 +444,333 @@ $stepper: $offset / $stepper-count;
   }
 }
 
-// Centering the thing for aesthetics
 .grid-wrapper {
   margin: 0 auto;
+}
+
+.flatContainer {
+  padding: 0px 50px;
+  padding-top: 140px;
+}
+
+
+@media(max-width: 1100px) {
+
+  .flatContainer {
+    padding: 0px 10px;
+    padding-top: 50px;
+  }
+  
+
+  .flat {
+    // padding: 0px 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  
+    &__direction {
+      display: inline-block;
+      @include text;
+      color:#3D7658;
+      margin-bottom: 20px;
+      transition: .5s;
+  
+      &:hover {
+        cursor:pointer;
+        text-decoration: underline;
+      }
+  
+    }
+  
+    &__info {
+      @include textBold;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+    }
+  
+    &__text {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      align-items: start;
+      user-select: none;
+    }
+  
+    &__status {
+      align-self: start;
+      border-radius: 2px;
+      text-align: center;
+      padding: 5px;
+      margin-bottom: 15px;
+      color: white;
+  
+      &_open {
+        background-color: #90C55B;
+      }
+  
+      &_closed {
+        background-color: red
+      }
+    }
+  
+    &__icons {
+      @include text;
+      color:#051C1B;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      font-size: 30px;
+  
+      div {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+      }
+    }
+  }
+
+  .form {
+    @include text;
+    // z-index: 15;
+    position: relative;
+    background: $white;
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0 0 30px rgba($black, .1);
+    box-sizing: border-box;
+    margin: 100px auto 10px;
+    overflow: hidden;
+  
+    // Toggle
+    &-toggle {
+      // z-index: 10;
+      position: absolute;
+      top: 60px;
+      right: 60px;
+      background: $white;
+      width: 60px;
+      height: 60px;
+      border-radius: 100%;
+      transform-origin: center;
+      transform: translate(0, -25%) scale(0);
+      opacity: 0;
+      cursor: pointer;
+      transition: all 0.3s ease;
+  
+      &:before,
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 30px;
+        height: 4px;
+        background: $accent;
+        transform: translate(-50%, -50%);
+      }
+  
+      &:before {
+        transform: translate(-50%, -50%) rotate(45deg);
+      }
+  
+      &:after {
+        transform: translate(-50%, -50%) rotate(-45deg);
+      }
+  
+      &.visible {
+        transform: translate(0, -25%) scale(1);
+        opacity: 1;
+      }
+    }
+  
+    &-group {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin: 0 0 20px;
+  
+      &:last-child {
+        margin: 0;
+      }
+  
+      label {
+        display: block;
+        margin: 0 0 10px;
+        
+        font-size: 12px;
+        @include textLight;
+        line-height: 1;
+        text-transform: uppercase;
+        letter-spacing: .2em;
+        color: $gray;
+        .two & {
+          color: $white;
+        }
+      }
+  
+      input {
+        outline: none;
+        display: block;
+        background: rgba($black, 0.1);
+        width: 100%;
+        border: 0;
+        border-radius: 0px;
+        box-sizing: border-box;
+        padding: 12px 20px;
+        color: $gray;
+        font-family: inherit;
+        font-size: inherit;
+        font-weight: $semibold;
+        line-height: inherit;
+        transition: 0.3s ease;
+  
+        &:focus {
+          color: $dark-gray;
+        }
+  
+        .two & {
+          color: $white;
+  
+          &:focus {
+            color: $white;
+          }
+        }
+      }
+  
+      button {
+        outline: none;
+        background: $accent;
+        width: 100%;
+        border: 0;
+        border-radius: 0px;
+        padding: 12px 20px;
+        color: $white;
+        font-family: inherit;
+        font-size: inherit;
+        font-weight: $semibold;
+        line-height: inherit;
+        text-transform: uppercase;
+        cursor: pointer;
+  
+        .two & {
+          background: $white;
+          color: $accent;
+        }
+      }
+  
+      .form-remember {
+        font-size: 12px;
+        font-weight: $regular;
+        letter-spacing: 0;
+        text-transform: none;
+  
+        input[type='checkbox'] {
+          display: inline-block;
+          width: auto;
+          margin: 0 10px 0 0;
+        }
+      }
+  
+      .form-recovery {
+        color: $accent;
+        font-size: 12px;
+        text-decoration: none;
+      }
+    }
+  }
+
+  .grid-wrapper {
+    display: flex;
+  }
+}
+
+
+@media(max-width: 760px) {
+  .flat {
+    // padding: 0px 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  
+    &__direction {
+      display: inline-block;
+      @include text;
+      color:#3D7658;
+      margin-bottom: 20px;
+      transition: .5s;
+  
+      &:hover {
+        cursor:pointer;
+        text-decoration: underline;
+      }
+  
+    }
+  
+    &__info {
+      @include textBold;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+  
+    &__text {
+      display: flex;
+      gap: 10px;
+      align-items: flex-start;
+      user-select: none;
+
+      &_title {
+        font-size: 50px;
+      }
+    }
+  
+    &__status {
+      border-radius: 2px;
+      text-align: center;
+      padding: 5px;
+      margin-bottom: 15px;
+      color: white;
+  
+      &_open {
+        background-color: #90C55B;
+      }
+  
+      &_closed {
+        background-color: red
+      }
+    }
+  
+    &__icons {
+      flex-direction: column;
+      gap: 50px;
+      font-size: 30px;
+  
+      div {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+      }
+    }
+  }
+
+  .form {
+    width: 100%;
+    margin: 10px;
+  }
+
+  .grid-wrapper {
+    display: none;
+  }
+
+  .flat__mobileImage {
+    display: block;
+  }
+}
+
+@media(min-width:760px) {
+  .flat__mobileImage {
+    display: none;
+  }
 }
