--- a/src/Pages/FilterPage/FilterPage.scss
+++ b/src/Pages/FilterPage/FilterPage.scss
@@ -1,3 +1,5 @@
+@use '../../Constants/GeneralStyles/fonts.scss' as *;
+
 .filterPage {
   padding: 100px 150px;
   min-height: 100vh;
@@ -25,8 +27,25 @@
   &__block {
     display: grid;
     grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     background-color: #EBEBEB;
     padding: 20px;
+  }
+
+  &__place {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 30px;
+
+    &_checkbox {
+      grid-column: 2/3;
+      grid-row: 1/3;
+    }
+
+    &_txt {
+      font-size: 24px;
+      @include text;
+    }
   }
 }
 
@@ -53,8 +72,25 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 30px;
-  }
+
+    &__place {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      column-gap: 30px;
   
+      &_checkbox {
+        grid-column: 2/3;
+        grid-row: 1/3;
+
+        justify-self: end;
+      }
+  
+      &_txt {
+        font-size: 24px;
+        @include text;
+      }
+    }
+  } 
 }
 
 @media(max-width: 500px) {
@@ -74,6 +110,24 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 30px;
+
+    &__place {
+      display: grid;
+      grid-template-columns: 1fr;
+      column-gap: 30px;
+      gap: 15px;
+  
+      &_checkbox {
+        grid-column: auto;
+        grid-row: 3/4;
+        justify-self: start;
+      }
+  
+      &_txt {
+        font-size: 24px;
+        @include text;
+      }
+    }
   }
   
 }
