--- a/src/Pages/TopicsPage/TopicsPage.scss
+++ b/src/Pages/TopicsPage/TopicsPage.scss
@@ -165,3 +165,271 @@
     }
   }
 }
+
+
+@media(max-width: 1100px) {
+  .topics {
+    min-height: 100vh;
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  
+    margin: 0 auto;
+  
+    &__mainGrid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      height: 70vh;
+      gap: 5px;
+      width: 100%;
+    }
+  
+    &__secondGridContainer {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 5px;
+    }
+  
+    &__gridElement {
+      &_second{
+        grid-column: 1/3;
+        grid-row: 1/2;
+      }
+      display: flex;
+      align-items: end;
+      
+      &_text {
+      }
+    }
+  
+    &__container {
+      margin-top: 30px;
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 40px;
+    }
+  
+    &__list {
+  
+      &_container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+      }
+  
+      &_element {
+  
+      }
+    }
+  
+    &__chipGroup {
+      // padding: 20px;
+      grid-row: 1/3;
+    }
+  
+  }
+  
+  .news {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    width: auto;
+    margin: 10px 0px;
+    height: 15vh;
+    padding: 10px;
+  
+    &__image{
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  
+    &__text {
+      align-self: end;
+    }
+  
+    &__title {
+      @include textBold;
+      color: rgb(57, 57, 57);
+    }
+    &__text {
+      @include textLight;
+      color: rgb(118, 118, 118);
+    }
+  
+    &:before,
+    &:after {
+      height: 14px;
+      width: 14px;
+      position: absolute;
+      content: '';
+      -webkit-transition: all 0.35s ease;
+      transition: all 0.35s ease;
+      opacity: 0;
+    }
+  
+    &:before {
+      right: 0;
+      top: 0;
+      border-right: 3px solid #2b614c;
+      border-top: 3px solid #2b614c;
+      -webkit-transform: translate(-100%, 50%);
+      transform: translate(-100%, 50%);
+    }
+    &:after {
+      left: 0;
+      bottom: 0;
+      border-left: 3px solid #2b614c;
+      border-bottom: 3px solid #2b614c;
+      -webkit-transform: translate(100%, -50%);
+      transform: translate(100%, -50%);
+    }
+    &:hover{
+      cursor: pointer;
+    }
+    &:hover:before,
+    &:hover:after{
+      -webkit-transform: translate(0%, 0%);
+      transform: translate(0%, 0%);
+      opacity: 1;
+    }
+  }
+  
+  .chipGroup {
+  
+    &__title {
+      @include textBold;
+      font-size: 25px;
+    }
+  
+    &__chips {
+      margin: 30px 40px 0px 0px;
+      align-self: center;
+    }
+  
+    &__chip {
+      font-size: 20px !important;
+    }
+  }
+}
+
+@media(max-width: 760px) {
+  .topics {
+    padding-top: 50px;
+    &__list {
+      &_container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+      }
+    }
+  }
+  
+  .news {
+    &__title {
+      @include textBold;
+      font-size: 25px;
+      color: rgb(57, 57, 57);
+    }
+    &__text {
+      @include textLight;
+      font-size: 20px;
+      color: rgb(118, 118, 118);
+    }
+  }
+}
+
+@media(max-width: 600px) {
+  .topics {
+    min-height: 100vh;
+  
+    margin: 0 auto;
+  
+    &__mainGrid {
+      display: block;
+      grid-template-columns: 1fr 1fr;
+      width: 100%;
+    }
+  
+    &__secondGridContainer {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 5px;
+    }
+  
+    &__gridElement {
+      
+      display: none;
+      align-items: end;
+      &_text {
+        align-self: end;
+        padding: 10px;
+      }
+      &_second{
+        width: 100%;
+        height: 70vh;
+        display: flex;
+      }
+    }
+  
+    &__container {
+      margin-top: 30px;
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 40px;
+    }
+  
+  }
+  
+  .news {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    width: auto;
+    margin: 10px 0px;
+    height: 15vh;
+    padding: 10px;
+  
+    &__image{
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  
+    &__text {
+      align-self: end;
+    }
+  
+    &__title {
+      @include textBold;
+      color: rgb(57, 57, 57);
+    }
+    &__text {
+      @include textLight;
+      color: rgb(118, 118, 118);
+    }
+  }
+  
+  .chipGroup {
+  
+    &__title {
+      @include textBold;
+      font-size: 25px;
+    }
+  
+    &__chips {
+      margin: 30px 40px 0px 0px;
+      align-self: center;
+    }
+  
+    &__chip {
+      font-size: 20px !important;
+    }
+  }
+}
