--- a/src/Pages/TopicsPage/TopicsPage.scss
+++ b/src/Pages/TopicsPage/TopicsPage.scss
@@ -29,6 +29,7 @@
   &__gridElement {
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     &_second{
       grid-column: 1/3;
       grid-row: 1/2;
@@ -41,9 +42,21 @@
       width: 100%;
       height: 50%;
       display: flex;
+      padding: 0px 20px;
       align-items: end;
       background: rgb(0,0,0);
       background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+
+      h1 {
+        transition: all 0.5s linear;
+      }
+    }
+
+    &:hover{
+      cursor: pointer;
+    }
+    &:hover &_text h1{
+      transform: translateY(-10px);
     }
   }
 
