--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -4,7 +4,7 @@
   $textPadding: 20px;
 
   justify-self: center;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.461);
   max-width: 100%;
   width: 100%; 
   position: relative;
@@ -37,7 +37,6 @@
     opacity: 20%;
   }
   
-
   &__date{
     position: absolute;
     display: flex;
@@ -77,8 +76,11 @@
     font-size: 15px;
   }
 
+  transition: all .3s linear;
+
   &:hover{
     cursor: pointer;
+    box-shadow: 10px 0px 62px -30px rgba(0,0,0,0.35);
   }
 }
 
