--- a/src/Pages/TopicsPage/TopicsPage.scss
+++ b/src/Pages/TopicsPage/TopicsPage.scss
@@ -62,6 +62,7 @@
 
   &__container {
     margin-top: 30px;
+    margin-bottom: 70px;
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -409,6 +410,7 @@
     margin: 10px 0px;
     height: 15vh;
     padding: 10px;
+
   
     &__image{
       background-repeat: no-repeat;
@@ -422,9 +424,11 @@
     &__title {
       @include textBold;
       color: rgb(57, 57, 57);
+      font-size: 18px;
     }
     &__text {
       @include textLight;
+      font-size: 15px;
       color: rgb(118, 118, 118);
     }
   }
