--- a/src/Pages/ContactPage/ContactPage.scss
+++ b/src/Pages/ContactPage/ContactPage.scss
@@ -1,4 +1,9 @@
 @use '../../Constants/GeneralStyles/fonts.scss' as *;
+
+html {  
+  scroll-behavior: smooth;
+}
+
 .contacts {
   // padding-top: 10px;
 
@@ -77,7 +82,10 @@
 
       h5 {
         @include textLight;
-
+        & span:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
       }
     }
 
