filling fakeData with information

--- a/src/Pages/JKPage/JKPage.scss
+++ b/src/Pages/JKPage/JKPage.scss
@@ -39,6 +39,7 @@
     &_gallery {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
       gap: 20px;
 
       &_wrapper {
@@ -50,6 +51,7 @@
       &_image {
         width: 100%;
         height: 100%;
+        object-fit: cover;
         transition: .7s;
         &:hover {
           transform: scale(1.05);
