change mobile header

--- a/src/Modules/Header/Header.scss
+++ b/src/Modules/Header/Header.scss
@@ -224,7 +224,7 @@
     font-size: 30px;
     display: block;
     align-self: center;
-    // margin: 
+    margin-right: 50px; 
   }
   .banner-wrapper-fixed {
   }
