--- a/src/Pages/MainPage/MainPage.scss
+++ b/src/Pages/MainPage/MainPage.scss
@@ -33,7 +33,7 @@
     @include text;
     text-align: center;
     font-size: 40px;
-    border-top: 1px solid #051C1B;
+    border-bottom: 1px solid #051C1B;
   }
 
   &__cards{
