--- a/src/Components/MobileSlides/MobileSlides.scss
+++ b/src/Components/MobileSlides/MobileSlides.scss
@@ -456,3 +456,16 @@
     width: 100%;
   }
 }
+
+
+@media(max-width:700px) {
+  .sliderFont {
+    display: block;
+    font-size: 25px;
+    z-index: 2 !important;
+  }
+
+  .number {
+    z-index: 0 !important;
+  }
+}
