--- a/src/Modules/Header/Header.scss
+++ b/src/Modules/Header/Header.scss
@@ -272,6 +272,10 @@ $heroHeight: 100vh;
           color: White;
           padding: 4em;
           background-color: #000000be;
+
+          img {
+            width: 20%;
+          }
         }
     }
     .arrow {
